samples/_failures_safe/1761787785_2d9325_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_088e5fc9.c: In function ‘main’:
./samples/SAFE/__tmp_088e5fc9.c:156:5: error: expected expression at end of input
  156 |     if (scanf("%d %d", &start, &end) != 2 || start <
      |     ^~
./samples/SAFE/__tmp_088e5fc9.c:156:5: error: expected declaration or statement at end of input
